Ultimos cambios comentado todo